[workspace]

members = [
    "asocks5",
]

[package]
name = "reflow"
version = "0.1.2"
authors = ["mut"]
edition = "2018"


[dependencies]
asocks5 = { path = "asocks5" }
byteorder = "1.2.3"
bytes = "^0.4"
futures-timer = "1"
env_logger = "0.5.*"
failure = "0.1.1"
httparse = "^1.0"
log = "^0.4"
nom = {version = "^4.0", features=["verbose-errors"] }
net2 = "^0.2"
tokio-io = "0.2.0-alpha.6"
tokio-net = "0.2.0-alpha.6"
radix_trie = "0.1.*"
structopt = "^0"
treebitmap = "0.3.1"
trust-dns = { version = "^0.17", default-features = false }
futures-preview =  { version = "0.3.0-alpha.16", features = ["compat"] }
tokio = "0.2.0-alpha.6"
