[package]
name = "asocks5"
version = "0.1.0"
authors = ["mut"]
edition = "2018"

[dependencies]
byteorder = "1.2.3"
bytes = "^0.4"
failure = "0.1.1"
log = "^0.4"
net2 = "^0.2"
tokio-io = "0.2.0-alpha.6"
tokio-net = "0.2.0-alpha.6"
futures-util-preview = "0.2.2"
futures-preview =  { version = "0.3.0-alpha.16", features = ["compat"] }
tokio = "0.2.0-alpha.6"

[dev-dependencies]
structopt = "*"
trust-dns-resolver = "*"