[package]
name = "asocks5"
version = "0.1.0"
authors = ["mut"]
edition = "2018"

[dependencies]
byteorder = "1.2.3"
bytes = "^0.4"
failure = "0.1.1"
log = "^0.4"
net2 = "^0.2"
futures-util-preview = "0.2.2"
futures-preview =  { version = "0.3.0-alpha.16", features = ["compat"] }
tokio = { version = "0.2.16", features = ["io-util", "io-driver", "macros", "rt-threaded" , "sync", "time", "tcp", "udp"] }

[dev-dependencies]
structopt = "*"
trust-dns-resolver = "*"